--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/paul-ka/Walking#readme",
   "dependencies": {
+    "angular-openweathermap-api-factory": "^0.5.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
